IF("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
cmake_minimum_required(VERSION 2.8.1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
find_path(BANDIT_INCLUDE_PATH bandit/bandit.h PATHS ../bandit)
include_directories(${BANDIT_INCLUDE_PATH})
find_path(GSL_INCLUDE_PATH gsl/gsl PATHS ../GSL/)
include_directories(${GSL_INCLUDE_PATH})
find_path(MCPPUTIL_INCLUDE_PATH mcpputil/mcpputil/declarations.hpp PATHS ../mcpputil/mcpputil/include/)
include_directories(${MCPPUTIL_INCLUDE_PATH})
include (${MCPPUTIL_INCLUDE_PATH}/../../setup.cmake)
ENDIF()
include_directories(${MCPPUTIL_INCLUDE_PATH})
add_subdirectory(mcppconcurrency)
